added reception of video